# poke-lookup

./: .coderabbit.yaml  Cargo.toml  Makefile  README.md  all_pokemon.json  overview.md  test_names.json  todo.md
.cargo/: config.toml
.github/scripts/: fetch-pokemon-data.py
.github/workflows/: ci.yml  update-data.yml
learning/: phase1-foundation.md  phase2-cli-interface.md  phase3-update-functionality.md  phase4-distribution.md  phase5-sprite-display.md
scripts/: setup-hooks.sh
scripts/hooks/: pre-commit
src/: data.rs  interactive.rs  main.rs  models.rs  search.rs  sprite.rs  update.rs
