[package]
name = "poke-lookup"
version = "0.1.0"
edition = "2024"
authors = ["cozy-corner"]
description = "日本語名からポケモンの英名を取得するCLIツール (PokéAPI準拠)"
license = "MIT"
repository = "https://github.com/cozy-corner/poke-lookup"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skim = "0.10"
directories = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "2.0"

# Sprite display dependencies
viuer = { version = "0.7", optional = true }
image = { version = "0.25", optional = true }

[features]
default = []
sprites = ["viuer", "image"]

[dev-dependencies]
tempfile = "3.0"
